--- a/bookreview/bookreview/Content/Site.css
+++ b/bookreview/bookreview/Content/Site.css
@@ -22,3 +22,48 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.item {
+    display: block;
+    width: 300px;
+    height: 400px;
+    margin: 25px;
+    border-radius: 10px;
+    border: 1px solid black;
+    position: relative;
+}
+.item .item-title {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #B7B6C1;
+    width: 100%;    
+    padding: 25px;
+    border-radius: 10px 10px 0 0;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.item .item-footer {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background-color: #B7B6C1;
+    width: 100%;    
+    padding: 25px;
+    border-radius: 0 0 10px 10px;
+    font-size: 16px;
+    font-weight: 600;
+    font-style: italic;
+}
+
+.item .item-body {
+    position: absolute;
+    width: 100%;
+    top: 25%;
+    bottom: 25%;
+    padding: 5px 25px;
+    overflow-y: hidden;
+    text-align: justify;
+}
