--- a/bookreview/bookreview/Views/Shared/_Layout.cshtml
+++ b/bookreview/bookreview/Views/Shared/_Layout.cshtml
@@ -22,8 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Książki", "Index", "Books")</li>
-                    <li>@Html.ActionLink("Autorzy", "Index", "Categories")</li>
-                    <li>@Html.ActionLink("Kategorie", "Index", "Authors")</li>
+                    <li>@Html.ActionLink("Kategorie", "Index", "Categories")</li>
+                    <li>@Html.ActionLink("Autorzy", "Index", "Authors")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
