--- a/bookreview/bookreview/Views/Books/Create.cshtml
+++ b/bookreview/bookreview/Views/Books/Create.cshtml
@@ -4,29 +4,76 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+<h2>Dodawanie książek</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
-        <h4>Book</h4>
+        <h4>Książka</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
+            <div class="row form-row">
+                <div class="col-md-2 control-label">
+                    Tytuł
+                </div>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.Name, new { @class = "form-control form-input" })
+                </div>
+            </div>
+            <div class="row form-row">
+                <div class="col-md-2 control-label">
+                    Autor
+                </div>
+                <div class="col-md-9 col-xs-10">
+                    @Html.DropDownListFor(model => model.Author, ViewBag.Authors as SelectList, new { @class = "form-control form-input" })
+                </div>
+                <div class="col-md-1 col-xs-2">@Html.ActionLink("Dodaj autora", "Create", "Authors")</div>
+            </div>
+            <div class="row form-row">
+                <div class="col-md-2 control-label">
+                    Data wydania
+                </div>
+                <div class="col-md-10">
+                    @Html.TextBoxFor(model => model.ReleaseDate, new { @class = "form-control form-input datepicker" })
+                </div>
+            </div>
+            <div class="row form-row">
+                <div class="col-md-2 control-label">
+                    Opis
+                </div>
+                <div class="col-md-10">
+                    @Html.TextAreaFor(model => model.Description, new { @class = "form-control form-input" })
+                </div>
+            </div>
+
+            <div class="row form-row">
+                <div class="col-md-2 control-label">
+                    Kategorie
+                </div>
+                <div class="col-md-10">
+
+                </div>
+            </div>
+
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Dodaj" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    <script type="text/javascript">
+        $('.datepicker').datepicker();
+    </script>
+    
 }
