--- a/bookreview/bookreview/Views/Shared/_Layout.cshtml
+++ b/bookreview/bookreview/Views/Shared/_Layout.cshtml
@@ -30,7 +30,13 @@
         </div>
     </div>
     <div class="container body-content">
-        @RenderBody()
+        <div class="col-xs-12">
+            @RenderBody()
+        </div>
+        
+    </div>
+    <div class="container">
+
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
