--- a/bookreview/bookreview/Views/Books/Index.cshtml
+++ b/bookreview/bookreview/Views/Books/Index.cshtml
@@ -25,7 +25,7 @@
                         @Html.DisplayFor(modelItem => item.Author.LastName), @Html.DisplayFor(modelItem => item.Author.FirstName)
                     </div>
                     <div class="item-desc">
-                        @Html.DisplayFor(modelItem => item.Description)
+                        @(item.ShortText())
                     </div>
                 </div>
                 <div class="item-footer">
