--- a/bookreview/bookreview/Views/Authors/Create.cshtml
+++ b/bookreview/bookreview/Views/Authors/Create.cshtml
@@ -24,7 +24,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Wróć do listy", "Index")
 </div>
 
 @section Scripts {
