--- a/bookreview/bookreview/Views/Authors/Index.cshtml
+++ b/bookreview/bookreview/Views/Authors/Index.cshtml
@@ -1,63 +1,38 @@
 ﻿@model IEnumerable<bookreview.Models.BaseModels.Author>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Autorzy";
 }
 
-<h2>Index</h2>
+<div class="col-xs-12">
+    <div class="subsite-header">
+        <h2>Autorzy</h2>
+        <p class="options">
+            @Html.ActionLink("Dodaj", "Create")
+        </p>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.FirstName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.LastName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BirthDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Bio)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BirthDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Bio)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedAt)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+<div class="col-xs-12">
+    @foreach (var item in Model)
+    {
+        <div class="item-wrapper col-xs-12 col-md-4">
+            <div class="item">
+                <div class="item-title">
+                   @Html.DisplayFor(modelItem => item.LastName), @Html.DisplayFor(modelItem => item.FirstName)
+                </div>
+                <div class="item-body">
+                    <div class="item-desc">
+                        @Html.DisplayFor(modelItem => item.Bio)
+                    </div>
+                </div>
+                <div class="item-footer">
+                    [Miejsce na komentarze, like, share itp]
+                </div>
+            </div>
+        </div>
+    }
+</div>
 }
 
-</table>
+
