--- a/bookreview/bookreview/Views/Books/Details.cshtml
+++ b/bookreview/bookreview/Views/Books/Details.cshtml
@@ -14,6 +14,6 @@
     @Html.DisplayFor(model => model.Description) <br />
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("Wróć do listy", "Index")
 </p>
