--- a/bookreview/bookreview/Views/Categories/Index.cshtml
+++ b/bookreview/bookreview/Views/Categories/Index.cshtml
@@ -1,24 +1,22 @@
 ﻿@model IEnumerable<bookreview.Models.BaseModels.Category>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Kategorie";
 }
 
-<h2>Index</h2>
+<div class="col-xs-12">
+    <div class="subsite-header">
+        <h2>Kategorie</h2>
+        <p class="options">
+            @Html.ActionLink("Dodaj", "Create")
+        </p>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.UpdatedAt)
         </th>
         <th></th>
     </tr>
@@ -29,15 +27,9 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.CreatedAt)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdatedAt)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
         </td>
     </tr>
 }
