--- a/bookreview/bookreview/Views/Authors/Index.cshtml
+++ b/bookreview/bookreview/Views/Authors/Index.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="item-body">
                     <div class="item-desc">
-                        @Html.DisplayFor(modelItem => item.Bio)
+                        @(item.ShortText())
                     </div>
                 </div>
                 <div class="item-footer">
