--- a/bookreview/bookreview/Views/Books/Create.cshtml
+++ b/bookreview/bookreview/Views/Books/Create.cshtml
@@ -7,11 +7,11 @@
 <h2>Dodawanie książek</h2>
 
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Create", "Books", FormMethod.Post, null))
 {
-    @Html.AntiForgeryToken()
+                @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
+                <div class="form-horizontal">
         <h4>Książka</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -21,8 +21,10 @@
                     Tytuł
                 </div>
                 <div class="col-md-10">
+                    @Html.LabelFor(model => model.Name)
                     @Html.TextBoxFor(model => model.Name, new { @class = "form-control form-input" })
                 </div>
+                @Html.ValidationMessageFor(model => model.Name)
             </div>
             <div class="row form-row">
                 <div class="col-md-2 control-label">
@@ -32,6 +34,7 @@
                     @Html.DropDownListFor(model => model.Author_Id, ViewBag.Authors as SelectList, new { @class = "form-control form-input" })
                 </div>
                 <div class="col-md-1 col-xs-2">@Html.ActionLink("Dodaj autora", "Create", "Authors")</div>
+                @Html.ValidationMessageFor(model => model.Author_Id)
             </div>
             <div class="row form-row">
                 <div class="col-md-2 control-label">
@@ -40,6 +43,7 @@
                 <div class="col-md-10">
                     @Html.TextBoxFor(model => model.ReleaseDate, new { @class = "form-control form-input datepicker" })
                 </div>
+                @Html.ValidationMessageFor(model => model.ReleaseDate)
             </div>
             <div class="row form-row">
                 <div class="col-md-2 control-label">
@@ -48,6 +52,7 @@
                 <div class="col-md-10">
                     @Html.TextAreaFor(model => model.Description, new { @class = "form-control form-input" })
                 </div>
+                @Html.ValidationMessageFor(model => model.Description)
             </div>
 
             <div class="row form-row">
