--- a/bookreview/bookreview/Views/Categories/Create.cshtml
+++ b/bookreview/bookreview/Views/Categories/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model bookreview.Models.BaseModels.Category
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj kategorię";
 }
 
-<h2>Create</h2>
+<h2>Stwórz</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,9 +12,12 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Category</h4>
+        <h4>Nowa kategoria</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.TextBoxFor(model => model.Name, new { name = "categoryTitle" })
+        </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -24,7 +27,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
 @section Scripts {
