--- a/bookreview/bookreview/Views/Authors/Index.cshtml
+++ b/bookreview/bookreview/Views/Authors/Index.cshtml
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div class="item-footer">
-                    [Miejsce na komentarze, like, share itp]
+                    <span class="btn btn-default">@Html.ActionLink("Zobacz więcej", "Details", new RouteValueDictionary { { "Id", item.Id } })</span>
                 </div>
             </div>
         </div>
