--- a/bookreview/bookreview/Views/Books/Index.cshtml
+++ b/bookreview/bookreview/Views/Books/Index.cshtml
@@ -9,6 +9,7 @@
         <h2>Książki</h2>
         <p class="options">
             @Html.ActionLink("Dodaj", "Create")
+            @Html.ActionLink("Pobierz raport", "CreatePDF")
         </p>
     </div>
 </div>
