--- a/bookreview/bookreview/Views/Books/Create.cshtml
+++ b/bookreview/bookreview/Views/Books/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model bookreview.Models.BaseModels.Book
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Dodaj";
 }
 
 <h2>Dodawanie książek</h2>
@@ -71,7 +71,7 @@
     </div>
 }
 
-<div>
+<div class="btn btn-default">
     @Html.ActionLink("Powrót do listy", "Index")
 </div>
 
