--- a/bookreview/bookreview/Views/Books/Index.cshtml
+++ b/bookreview/bookreview/Views/Books/Index.cshtml
@@ -8,9 +8,9 @@
     <div class="subsite-header">
         <h2>Książki</h2>
         <p class="options">
-            @Html.ActionLink("Dodaj", "Create")
-            @Html.ActionLink("Pobierz raport", "CreatePDF")
-        </p>
+            <p class="btn btn-default">@Html.ActionLink("Dodaj", "Create")</p>
+            <p class="btn btn-default">@Html.ActionLink("Pobierz raport", "CreatePDF")</p>
+    </p>
     </div>
 </div>
 <div class="col-xs-12">
