--- a/bookreview/bookreview/Views/Categories/Details.cshtml
+++ b/bookreview/bookreview/Views/Categories/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model bookreview.Models.BaseModels.Category
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Szczegóły";
 }
 
 <h2>Szczegóły</h2>
@@ -11,7 +11,6 @@
     <hr />
     Nazwa: @(Model.Name)<br />
 </div>
-<p>
-    @Html.ActionLink("Edytuj", "Edit", new { id = Model.Id }) |
+<p class="btn btn-default">
     @Html.ActionLink("Wróć do listy", "Index")
 </p>
