--- a/bookreview/bookreview/Views/Categories/Index.cshtml
+++ b/bookreview/bookreview/Views/Categories/Index.cshtml
@@ -27,9 +27,7 @@
             @Html.DisplayFor(modelItem => item.Name)
         </td>
         <td>
-            @Html.ActionLink("Edytuj", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Usuń", "Delete", new { id=item.Id })
+            @Html.ActionLink("Szczegóły", "Details", new { id=item.Id })
         </td>
     </tr>
 }
