--- a/bookreview/bookreview/Views/Authors/Details.cshtml
+++ b/bookreview/bookreview/Views/Authors/Details.cshtml
@@ -19,7 +19,7 @@
 </div>
 @if (User.Identity.IsAuthenticated)
 {
-    if (!bookreview.Models.ApplicationUser.HasRated(Model))
+    if (!bookreview.Models.ApplicationUser.HasRated(Model, false))
     {
         @Html.Partial("~/Views/Rates/Create.cshtml", new bookreview.Models.BaseModels.Rate(), new ViewDataDictionary{ { "type", false }, { "id", Model.Id.ToString() } })
     }
